# pykaleidoscope

./: .gitignore  README.md  README.rst  chapter1and2.py  chapter2.py  chapter3.py  chapter3and4.py  chapter5.py  chapter6.py  chapter7.py  chapter7and8.py  chapter8.py  part1.py  pyproject.toml
