[project]
name = "pykaleidoscope"
version = "0.1.0"
description = "LLVM Kaleidoscope tutorial using Python and llvmlite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llvmlite>=0.44.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
